--- a/clash.ini
+++ b/clash.ini
@@ -1,13 +1,13 @@
-;1、域名组.
-ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcXAlias.list
-ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
-ruleset=FinishLine,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/FNL.list
-ruleset=Dicks,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Dicks.list
+;1、域名组.....
+;ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcXAlias.list
+;ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
+;ruleset=FinishLine,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/FNL.list
+;ruleset=Dicks,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Dicks.list
 ruleset=👽 AI,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI.list
 ruleset=👽 AI,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/AI2.list
-ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
-ruleset=👯‍♂️ TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
-ruleset=🙋 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+;ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
+;ruleset=👯‍♂️ TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
+;ruleset=🙋 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/HBO/HBO.list
 ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
@@ -21,51 +21,62 @@ ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
-ruleset=🌍 国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Proxy.list
-ruleset=🌍 国外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ProxyGFWlist.list
-ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
+ruleset=🌍 国外,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+ruleset=🌍 国外,[]DOMAIN-SUFFIX,services.googleapis.cn
+ruleset=🌍 国外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+;ruleset=🌍 国外,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/Proxy.list
+;ruleset=🌍 国外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ProxyGFWlist.list
+;ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/DIRECT.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
-ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他`[]DIRECT
-custom_proxy_group=🇨🇳 搬瓦工`select`(233boy|233)
+custom_proxy_group=🚀 节点选择`select`select`.*`[]DIRECT
+;custom_proxy_group=🇨🇳 搬瓦工`select`(233boy|233)
+;custom_proxy_group=📡 Rich`select`(rich|Rich)
+;custom_proxy_group=1️⃣ 自定义`select`.*
+;custom_proxy_group=2️⃣ 自定义`select`.*
 ;custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=StockX&Goat`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=Footsites`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=FinishLine`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=Dicks`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=👽 AI`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=📘 GitHub`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=🙋 Telegram`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=📀 流媒体`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=🌍 国外`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]家宽`[]其他
+;custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+;custom_proxy_group=StockX&Goat`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=Footsites`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=FinishLine`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=Dicks`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=👽 AI`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=📘 GitHub`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=🙋 Telegram`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=📀 流媒体`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=🌍 国外`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 
 ;3、节点组
 ;custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港节点`select`(港|HK|hk|Hong Kong|HongKong|hongkong)
-custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)
-custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
-custom_proxy_group=家宽`select`(家宽|家)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=其他`select`(波|柬|斯|尼|也|克|比|尔|立|冰|秘|耳|利|埃|希|斯|孟|芬|阿|愛|澳|英|德|南|意|法|拿|墨|印|越|俄|瑞|智|荷|比|巴|沙|班|泰|德|烏|以|Australia|Konghwaguk)
+;custom_proxy_group=🇭🇰 香港节点`select`(港|HK|hk|Hong Kong|HongKong|hongkong)
+;custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)
+;custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+;custom_proxy_group=🏠 家宽`select`(家宽|家)`http://www.gstatic.com/generate_204`300,,50
+;custom_proxy_group=其他`select`(波|柬|斯|尼|也|克|比|尔|立|冰|秘|耳|利|埃|希|斯|孟|芬|阿|愛|澳|英|德|南|意|法|拿|墨|印|越|俄|瑞|智|荷|比|巴|沙|班|泰|德|烏|以|Australia|Konghwaguk)
+
+
 
 
 ;4、启用规则集
