--- a/Clash.ini
+++ b/Clash.ini
@@ -1,11 +1,11 @@
-;11、域名组。。1111
+;11、域名组
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcXAlias.list
 ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
 ruleset=FinishLine,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/FNL.list
 ruleset=Dicks,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Dicks.list
 ruleset=Hibbett,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/hibbett.list
 ruleset=Nike,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/nike.list
-ruleset=isp,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/isp.list
+ruleset=加速,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/isp.list
 ruleset=👽 AI,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/AI.list
 ruleset=TikTok,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/TikTok.list
 ;ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
@@ -45,30 +45,30 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇨🇳 搬瓦工`[]📡 Rich`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]1️⃣ 自定义`[]2️⃣ 自定义`[]其他`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇨🇳 搬瓦工`[]📡 ISP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]1️⃣ 自定义`[]2️⃣ 自定义`[]其他`[]DIRECT
 custom_proxy_group=🇨🇳 搬瓦工`select`(233boy|233)
-custom_proxy_group=📡 Rich`select`(rich|Rich)
+custom_proxy_group=📡 ISP`select`(ISP|ISP)
 custom_proxy_group=1️⃣ 自定义`select`.*
 custom_proxy_group=2️⃣ 自定义`select`.*
 ;custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=StockX&Goat`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=Footsites`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=FinishLine`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=Dicks`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=Nike`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=Hibbett`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=isp`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=👽 AI`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他`select`.*
-custom_proxy_group=TikTok`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他`select`.*
+custom_proxy_group=StockX&Goat`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 ISP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Footsites`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 ISP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=FinishLine`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 ISP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Dicks`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 ISP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Nike`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 ISP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Hibbett`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 ISP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=加速`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 ISP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=👽 AI`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 ISP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他`select`.*
+custom_proxy_group=TikTok`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 ISP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他`select`.*
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 ;custom_proxy_group=📘 GitHub`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 ;custom_proxy_group=🙋 Telegram`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=📀 流媒体`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=🌍 国外`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=📀 流媒体`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 ISP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=🌍 国外`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 ISP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 ;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
