--- a/Clash.ini
+++ b/Clash.ini
@@ -1,4 +1,4 @@
-;11域名组...
+;11域名组...。
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcXAlias.list
 ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
 ruleset=FinishLine,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/FNL.list
@@ -6,7 +6,6 @@ ruleset=Dicks,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/mai
 ruleset=Hibbett,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/hibbett.list
 ruleset=Nike,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/nike.list
 ruleset=加速,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/isp.list
-ruleset=AYCD,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/aycd.list
 ruleset=👽 AI,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/AI.list
 ruleset=TikTok,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/TikTok.list
 ;ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
@@ -54,7 +53,6 @@ custom_proxy_group=1️⃣ 自定义`select`.*
 custom_proxy_group=2️⃣ 自定义`select`.*
 ;custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=AYCD`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]📡 Home`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=StockX&Goat`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]📡 Home`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=Footsites`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]📡 Home`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=FinishLine`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Rich`[]📡 Home`[]1️⃣ 自定义`[]2️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
